package protobuf;

message AddFriend_Req {
	required string token = 1;
	required int32 playerId = 2;
	required int32 addType = 3;//1.添加 2.邀请
}
